fix navbar alignment

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -27,12 +27,16 @@
 
 .profile-card {
   position: relative;
-  top: 50%;
+  top: 40%;
   transform: translateY(-50%);
   max-width: 500px;
   margin-right: auto;
   margin-left: auto;
   max-height: 230px;
   border-radius: 5px;
+  box-shadow: 0px 0px 15px black;
+}
+
+.navbar {
   box-shadow: 0px 0px 15px black;
 }
